--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,22 @@ body {
 			font-family: 'Brush Script MT' , cursive;
 			font-size: 80px;
 		}
+		.vertical-menu a {
+			width: 200px; 
+			}
+		
+		.vertical-menu a {
+			background-color: pink; 
+			color: #eee; 
+			display: block; 
+			padding: 12px; 
+			text-decoration: none;
+			}
+		.vertical-menu a:hover {
+			background-color:#ccc;
+			}
+		.vertical-menu a.active {
+		background-color: white; 
+		}
+		
+		
